avoid color overlapping of quest cells on hover

--- a/app/assets/stylesheets/pages/_quests.scss
+++ b/app/assets/stylesheets/pages/_quests.scss
@@ -14,6 +14,7 @@
     position: relative;
     margin-bottom: 60px;
     background-color: $background_inverse;
+    @include box-shadow(rgba(0, 0, 0, .7) 5px 5px 7px);
     @include transition-duration(0.15s);
     &:nth-child(even) {
       @include rotate(3deg);
@@ -33,11 +34,9 @@
       z-index:5;
     }
     .quest-cell {
-      width: 100%;
       height: 256px;
       position: relative;
-      @include border-radius(1px, 1px);
-      @include box-shadow(rgba(0, 0, 0, .7) 5px 5px 7px);
+      border: 1px solid $background;
       .tape{
         position:absolute;
         top: -15px;
